--- a/tasks/dns/cloudflare/cloudflare.schema.dns.yml
+++ b/tasks/dns/cloudflare/cloudflare.schema.dns.yml
@@ -18,7 +18,7 @@ schemas:
         description: "cloudflare dns credentials"
   params:
     type: "dict"
-    description: "godaddy dns parameters schema"
+    description: "cloudflare dns parameters schema"
     props:
       list:
         type: "list"
@@ -80,7 +80,7 @@ schemas:
         description: "list with strings or dictionaries representing the dns record value"
   list_item_params:
     type: "dict"
-    description: "godaddy dns parameters list schema"
+    description: "cloudflare dns parameters list schema"
     props:
       when:
         type: "bool"
