[dev] db - aws (rds)

--- a/tasks/db/aws/aws.main.db.yml
+++ b/tasks/db/aws/aws.main.db.yml
@@ -13,87 +13,84 @@
 
 - name: "{{ inner_service_title }} - aws db (rds) - main"
   community.aws.rds_instance:
-    db_instance_identifier: "{{ params.name }}"
-    access_key: "{{ credentials.access_key }}"
-    secret_key: "{{ credentials.secret_key }}"
-    allocated_storage: "{{ params.allocated_storage | default(omit) }}"
-    allow_major_version_upgrade: "{{ params.allow_major_version_upgrade | default(omit) }}"
-    apply_immediately: "{{ params.apply_immediately | default(omit) }}"
-    auto_minor_version_upgrade: "{{ params.auto_minor_version_upgrade | default(omit) }}"
-    availability_zone: "{{ params.availability_zone | default(omit) }}"
-    backup_retention_period: "{{ params.backup_retention_period | default(omit) }}"
-    ca_certificate_identifier: "{{ params.ca_certificate_identifier | default(omit) }}"
-    character_set_name: "{{ params.character_set_name | default(omit) }}"
-    copy_tags_to_snapshot: "{{ params.copy_tags_to_snapshot | default(omit) }}"
-    creation_source: "{{ params.creation_source | default(omit) }}"
-    db_cluster_identifier: "{{ params.db_cluster_identifier | default(omit) }}"
-    db_instance_class: "{{ params.db_instance_class | default(omit) }}"
-    db_name: "{{ params.db_name | default(omit) }}"
-    db_parameter_group_name: "{{ params.db_parameter_group_name | default(omit) }}"
-    db_security_groups: "{{ params.db_security_groups | default(omit) }}"
-    db_snapshot_identifier: "{{ params.db_snapshot_identifier | default(omit) }}"
-    db_subnet_group_name: "{{ params.db_subnet_group_name | default(omit) }}"
-    domain: "{{ params.domain | default(omit) }}"
-    domain_iam_role_name: "{{ params.domain_iam_role_name | default(omit) }}"
-    enable_cloudwatch_logs_exports: "{{ params.enable_cloudwatch_logs_exports | default(omit) }}"
-    enable_iam_database_authentication: "{{ params.enable_iam_database_authentication | default(omit) }}"
-    enable_performance_insights: "{{ params.enable_performance_insights | default(omit) }}"
-    engine: "{{ params.engine | default(omit) }}"
-    engine_version: "{{ params.engine_version | default(omit) }}"
-    final_db_snapshot_identifier: "{{ params.final_db_snapshot_identifier | default(omit) }}"
-    force_failover: "{{ params.force_failover | default(omit) }}"
-    force_update_password: "{{ params.force_update_password | default(omit) }}"
-    iops: "{{ params.iops | default(omit) }}"
-    kms_key_id: "{{ params.kms_key_id | default(omit) }}"
-    license_model: "{{ params.license_model | default(omit) }}"
-    master_username: "{{ params.master_username | default(omit) }}"
-    max_allocated_storage: "{{ params.max_allocated_storage | default(omit) }}"
-    monitoring_interval: "{{ params.monitoring_interval | default(omit) }}"
-    monitoring_role_arn: "{{ params.monitoring_role_arn | default(omit) }}"
-    multi_az: "{{ params.multi_az | default(omit) }}"
-    new_db_instance_identifier: "{{ params.new_db_instance_identifier | default(omit) }}"
-    option_group_name: "{{ params.option_group_name | default(omit) }}"
-    performance_insights_kms_key_id: "{{ params.performance_insights_kms_key_id | default(omit) }}"
-    performance_insights_retention_period: "{{ params.performance_insights_retention_period | default(omit) }}"
-    port: "{{ params.port | default(omit) }}"
-    preferred_backup_window: "{{ params.preferred_backup_window | default(omit) }}"
-    preferred_maintenance_window: "{{ params.preferred_maintenance_window | default(omit) }}"
-    processor_features: "{{ params.processor_features | default(omit) }}"
-    promotion_tier: "{{ params.promotion_tier | default(omit) }}"
-    publicly_accessible: "{{ params.publicly_accessible | default(omit) }}"
-    purge_cloudwatch_logs_exports: "{{ params.purge_cloudwatch_logs_exports | default(omit) }}"
-    purge_security_groups: "{{ params.purge_security_groups | default(omit) }}"
-    purge_tags: "{{ params.purge_tags | default(omit) }}"
-    read_replica: "{{ params.read_replica | default(omit) }}"
-    region: "{{ params.region | default(omit) }}"
-    restore_time: "{{ params.restore_time | default(omit) }}"
-    s3_bucket_name: "{{ params.s3_bucket_name | default(omit) }}"
-    s3_ingestion_role_arn: "{{ params.s3_ingestion_role_arn | default(omit) }}"
-    s3_prefix: "{{ params.s3_prefix | default(omit) }}"
-    security_token: "{{ params.security_token | default(omit) }}"
-    skip_final_snapshot: "{{ params.skip_final_snapshot | default(omit) }}"
-    snapshot_identifier: "{{ params.snapshot_identifier | default(omit) }}"
-    source_db_instance_identifier: "{{ params.source_db_instance_identifier | default(omit) }}"
-    source_engine: "{{ params.source_engine | default(omit) }}"
-    source_engine_version: "{{ params.source_engine_version | default(omit) }}"
-    source_region: "{{ params.source_region | default(omit) }}"
-    state: "{{ params.state | default(omit) }}"
-    storage_encrypted: "{{ params.storage_encrypted | default(omit) }}"
-    storage_type: "{{ params.storage_type | default(omit) }}"
-    tags: "{{ params.tags | default(omit) }}"
-    tde_credential_arn: "{{ params.tde_credential_arn | default(omit) }}"
-    timezone: "{{ params.timezone | default(omit) }}"
-    use_latest_restorable_time: "{{ params.use_latest_restorable_time | default(omit) }}"
-    validate_certs: "{{ params.validate_certs | default(omit) }}"
-    vpc_security_group_ids: "{{ params.vpc_security_group_ids | default(omit) }}"
-    wait: "{{ params.wait | default(omit) }}"
-    master_user_password: "{{ credentials.master_user_password | default(omit) }}"
-    tde_credential_password: "{{ credentials.tde_credential_password | default(omit) }}"
+    db_instance_identifier: "{{ ext_db_item.name }}"
+    access_key: "{{ ext_db_item.access_key }}"
+    secret_key: "{{ ext_db_item.secret_key }}"
+    allocated_storage: "{{ ext_db_item.allocated_storage | default(omit) }}"
+    allow_major_version_upgrade: "{{ ext_db_item.allow_major_version_upgrade | default(omit) }}"
+    apply_immediately: "{{ ext_db_item.apply_immediately | default(omit) }}"
+    auto_minor_version_upgrade: "{{ ext_db_item.auto_minor_version_upgrade | default(omit) }}"
+    availability_zone: "{{ ext_db_item.availability_zone | default(omit) }}"
+    backup_retention_period: "{{ ext_db_item.backup_retention_period | default(omit) }}"
+    ca_certificate_identifier: "{{ ext_db_item.ca_certificate_identifier | default(omit) }}"
+    character_set_name: "{{ ext_db_item.character_set_name | default(omit) }}"
+    copy_tags_to_snapshot: "{{ ext_db_item.copy_tags_to_snapshot | default(omit) }}"
+    creation_source: "{{ ext_db_item.creation_source | default(omit) }}"
+    db_cluster_identifier: "{{ ext_db_item.db_cluster_identifier | default(omit) }}"
+    db_instance_class: "{{ ext_db_item.db_instance_class | default(omit) }}"
+    db_name: "{{ ext_db_item.db_name | default(omit) }}"
+    db_parameter_group_name: "{{ ext_db_item.db_parameter_group_name | default(omit) }}"
+    db_security_groups: "{{ ext_db_item.db_security_groups | default(omit) }}"
+    db_snapshot_identifier: "{{ ext_db_item.db_snapshot_identifier | default(omit) }}"
+    db_subnet_group_name: "{{ ext_db_item.db_subnet_group_name | default(omit) }}"
+    domain: "{{ ext_db_item.domain | default(omit) }}"
+    domain_iam_role_name: "{{ ext_db_item.domain_iam_role_name | default(omit) }}"
+    enable_cloudwatch_logs_exports: "{{ ext_db_item.enable_cloudwatch_logs_exports | default(omit) }}"
+    enable_iam_database_authentication: "{{ ext_db_item.enable_iam_database_authentication | default(omit) }}"
+    enable_performance_insights: "{{ ext_db_item.enable_performance_insights | default(omit) }}"
+    engine: "{{ ext_db_item.engine | default(omit) }}"
+    engine_version: "{{ ext_db_item.engine_version | default(omit) }}"
+    final_db_snapshot_identifier: "{{ ext_db_item.final_db_snapshot_identifier | default(omit) }}"
+    force_failover: "{{ ext_db_item.force_failover | default(omit) }}"
+    force_update_password: "{{ ext_db_item.force_update_password | default(omit) }}"
+    iops: "{{ ext_db_item.iops | default(omit) }}"
+    kms_key_id: "{{ ext_db_item.kms_key_id | default(omit) }}"
+    license_model: "{{ ext_db_item.license_model | default(omit) }}"
+    master_username: "{{ ext_db_item.master_username | default(omit) }}"
+    max_allocated_storage: "{{ ext_db_item.max_allocated_storage | default(omit) }}"
+    monitoring_interval: "{{ ext_db_item.monitoring_interval | default(omit) }}"
+    monitoring_role_arn: "{{ ext_db_item.monitoring_role_arn | default(omit) }}"
+    multi_az: "{{ ext_db_item.multi_az | default(omit) }}"
+    new_db_instance_identifier: "{{ ext_db_item.new_db_instance_identifier | default(omit) }}"
+    option_group_name: "{{ ext_db_item.option_group_name | default(omit) }}"
+    performance_insights_kms_key_id: "{{ ext_db_item.performance_insights_kms_key_id | default(omit) }}"
+    performance_insights_retention_period: "{{ ext_db_item.performance_insights_retention_period | default(omit) }}"
+    port: "{{ ext_db_item.port | default(omit) }}"
+    preferred_backup_window: "{{ ext_db_item.preferred_backup_window | default(omit) }}"
+    preferred_maintenance_window: "{{ ext_db_item.preferred_maintenance_window | default(omit) }}"
+    processor_features: "{{ ext_db_item.processor_features | default(omit) }}"
+    promotion_tier: "{{ ext_db_item.promotion_tier | default(omit) }}"
+    publicly_accessible: "{{ ext_db_item.publicly_accessible | default(omit) }}"
+    purge_cloudwatch_logs_exports: "{{ ext_db_item.purge_cloudwatch_logs_exports | default(omit) }}"
+    purge_security_groups: "{{ ext_db_item.purge_security_groups | default(omit) }}"
+    purge_tags: "{{ ext_db_item.purge_tags | default(omit) }}"
+    read_replica: "{{ ext_db_item.read_replica | default(omit) }}"
+    region: "{{ ext_db_item.region | default(omit) }}"
+    restore_time: "{{ ext_db_item.restore_time | default(omit) }}"
+    s3_bucket_name: "{{ ext_db_item.s3_bucket_name | default(omit) }}"
+    s3_ingestion_role_arn: "{{ ext_db_item.s3_ingestion_role_arn | default(omit) }}"
+    s3_prefix: "{{ ext_db_item.s3_prefix | default(omit) }}"
+    security_token: "{{ ext_db_item.security_token | default(omit) }}"
+    skip_final_snapshot: "{{ ext_db_item.skip_final_snapshot | default(omit) }}"
+    snapshot_identifier: "{{ ext_db_item.snapshot_identifier | default(omit) }}"
+    source_db_instance_identifier: "{{ ext_db_item.source_db_instance_identifier | default(omit) }}"
+    source_engine: "{{ ext_db_item.source_engine | default(omit) }}"
+    source_engine_version: "{{ ext_db_item.source_engine_version | default(omit) }}"
+    source_region: "{{ ext_db_item.source_region | default(omit) }}"
+    state: "{{ ext_db_item.state | default(omit) }}"
+    storage_encrypted: "{{ ext_db_item.storage_encrypted | default(omit) }}"
+    storage_type: "{{ ext_db_item.storage_type | default(omit) }}"
+    tags: "{{ ext_db_item.tags | default(omit) }}"
+    tde_credential_arn: "{{ ext_db_item.tde_credential_arn | default(omit) }}"
+    timezone: "{{ ext_db_item.timezone | default(omit) }}"
+    use_latest_restorable_time: "{{ ext_db_item.use_latest_restorable_time | default(omit) }}"
+    validate_certs: "{{ ext_db_item.validate_certs | default(omit) }}"
+    vpc_security_group_ids: "{{ ext_db_item.vpc_security_group_ids | default(omit) }}"
+    wait: "{{ ext_db_item.wait | default(omit) }}"
+    master_user_password: "{{ ext_db_item.master_user_password | default(omit) }}"
+    tde_credential_password: "{{ ext_db_item.tde_credential_password | default(omit) }}"
   loop: "{{ ext_db_data_wrapper.data.list }}"
   loop_control:
     loop_var: ext_db_item
-    label: >-
-      [{{ ext_db_item.state }}]
-      {{ ext_db_item.db_type }}
-      ({{ ext_db_item.record }})
+    label: "[{{ ext_db_item.state }}] {{ ext_db_item.name }}"
   no_log: "{{ env_no_log }}"
