--- a/files/discourse/container.tpl.yml
+++ b/files/discourse/container.tpl.yml
@@ -116,7 +116,15 @@ links:
 
 params:
   db_default_text_search_config: "{{ params.db_default_text_search_config | default('pg_catalog.english') }}"
+
+  {####################################}
+  {% if (params.db_shared_buffers | default('')) != '' %}
+
   db_shared_buffers: "{{ params.db_shared_buffers | default('') }}"
+
+  {% endif %}
+  {####################################}
+
   db_work_mem: "40MB"
   version: "{{ params.version | default('tests-passed') }}"
 env:
