--- a/tasks/node/aws/aws.main.node.yml
+++ b/tasks/node/aws/aws.main.node.yml
@@ -35,18 +35,24 @@
     wait_timeout: "{{ ext_node_item.wait_timeout }}"
     wait: true
     purge_tags: true
-  loop: "{{ ext_node_data_wrapper.data.replicas }}"
+  loop: "{{ ext_node_data_wrapper.data.list }}"
   loop_control:
     loop_var: ext_node_item
     label: "[{{ ext_node_item.state }}] {{ ext_node_item.name }}"
+  register: ext_node_details
   no_log: "{{ env_no_log }}"
+
+- name: "{{ inner_service_title }} - aws node - set hosts (empty)"
+  set_fact:
+    ext_node_hosts: []
+  tags: ["no_print"]
 
 - name: "{{ inner_service_title }} - aws node - set hosts"
   set_fact:
     ext_node_hosts: "{{ ext_node_hosts + [ext_node_item_result] }}"
   vars:
     ext_node_item: "{{ ext_node_item_data.ext_node_item | default({}) }}"
-    ext_node_instance: "{{ ext_node_item_data.data.instances[0] | default({}) }}"
+    ext_node_instance: "{{ ext_node_item_data.instances[0] | default({}) }}"
     ext_node_item_result:
       name: "{{ ext_node_item.name }}"
       state: "{{ ext_node_item.state }}"
